# fsd_skeleton

./: .gitignore  .gitmodules  README.md  SGT-DV_install_man.md  fsd_environment.sh  update_dependencies.sh
src/0_fsd_common/fsd_common_meta/: CMakeLists.txt
src/0_fsd_common/fsd_common_msgs/: CMakeLists.txt
src/1_perception/lidar_cone_detector/: CMakeLists.txt
src/1_perception/perception_meta/: CMakeLists.txt
src/1_perception/vision_cone_detector/: CMakeLists.txt
src/2_estimation/estimation_meta/: CMakeLists.txt
src/2_estimation/slam_slam/: CMakeLists.txt
src/2_estimation/velocity_estimator/: CMakeLists.txt
src/3_control/control_meta/: CMakeLists.txt
src/3_control/control_pure_pursuit/: CMakeLists.txt
src/3_control/control_pure_pursuit/config/: pure_pursuit.yaml
src/4_continuous_integration/rosdep/: fsd-dependencies.yaml
src/fssim_interface/: CMakeLists.txt  package.xml
src/fssim_interface/config/: config.yaml
src/fssim_interface/fssim_config/: calibration_simulation.yaml  local_simulation.yaml
src/fssim_interface/fssim_config/sensors/: sensors_1.yaml
src/fssim_interface/include/: interface.hpp
src/fssim_interface/launch/: fssim.launch  fssim_calibration.launch  rviz.launch
src/fssim_interface/rviz/: calibration.rviz  fssim.xml  trackdrive.rviz
src/fssim_interface/src/: fssim_interface_node.cpp
